--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-This project displays different events that happened on my birthday, August 21st. Click on the buttons below the card to see what other historic events happened on my birthday!
+This project displays the different events that happened on my birthday, August 21st. Click on the buttons below the card to see what other historic events happened on my birthday!
